--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 Rimer is a timer that executes commands on every update step.
 It can run multiple timers and be used as countdown or as stopwatch.
 
-* Modivation
+* Motivation
   I like pomodoro technique and I like lemonbar. I wanted to track remaining
   pomodoro time on my panel and couldn't find any ready solution. I was also
   learning rust, so I decided to write new timer in it (the previous one that I
