--- a/README.org
+++ b/README.org
@@ -40,7 +40,7 @@ It can run multiple timers and be used as countdown or as stopwatch.
 
   Rimer will update ~work~ timer:
 
-  ~$ <command> countdown work <elapsed time> 3600 paused
+  ~$ <command> countdown work <elapsed time> 3600 paused~
 
   Resume timer:
 
@@ -53,8 +53,7 @@ It can run multiple timers and be used as countdown or as stopwatch.
 
   ~stopwatch~ is the same as ~countdown~ but the ~<total time to run>~ will be a
   maximum *unsigned 64 bit integer*. I hope you will never run your stopwatch
-  for a period so long :). I know that it's a hack, but it keeps implementation
-  simple IMO.
+  for a period so long :). This keeps implementation simple IMO.
 
   Other commands are ~report~, ~quit~ and ~help~. ~report~ gives you a list of
   all currently present timers in the same format as described above. ~quit~
