--- a/README.org
+++ b/README.org
@@ -1,8 +1,69 @@
 #+TITLE: Rimer: simple timer
 
-Rimer is a timer that executes commands on every update step.
-It can run multiple timers and can be used as countdown or as stopwatch.
+Rimer is a timer that executes commands on every timer step.  It can run
+multiple timers and can be used as a countdown or as a stopwatch.
 
+* What it does
+  You start server with the following commmand
+
+  ~$ rimer start <callback>~
+
+  ~<callback>~ will be called every timer step with the following arguments:
+
+  ~<name> <elapsed time> <total time to run> <status> <callback arg>~
+
+  ~<name>~ is used to distinguish different running timers.
+
+  If you run your timer like this:
+
+  ~$ rimer add --name work --duration 3600 --step 5 --arg somevalue~
+
+  New timer with name ~work~ will be added and it will run 3600 seconds.  Every
+  5 seconds the ~<callback>~ will be called like this:
+
+  ~$ <callback> work <elapsed time> 3600 running somevalue~
+
+  If you pause the timer
+
+  ~$ rimer pause work~
+
+  Rimer will update ~work~ timer:
+
+  ~$ <callback> work <elapsed time> 3600 paused~
+
+  Resume timer:
+
+  ~$ rimer resume --name work~
+
+  The final update will have the status ~halted~.  You can explicitly halt your
+  timer with halt command:
+
+  ~$ rimer halt --name work~
+
+  You can use your timer as a ~stopwatch~ by setting duration to a maximum
+  *unsigned 64 bit integer*.  I hope you will never run your stopwatch for a
+  period so long :).  This keeps implementation simple IMO.
+
+  Other commands are ~report~ and ~quit~.  ~report~ gives you a list of all
+  currently present timers in the same format as described above or in
+  json.  ~quit~ tells *rimer* to quit server.
+
+* Installation
+  Install rust and cargo.  Download this repo and run:
+
+  ~$ cargo build --release~
+
+  You can install it in the cargo's executables directory
+
+  ~$ cargo install --path . --force~
+
+  There is also default.nix expression!  Just import it in your pkgs.
+
+  #+begin_src nix
+    packageOverrides = pkgs: {
+      rimer = import https://url.url pkgs;
+    };
+  #+end_src
 * Motivation
   I like pomodoro technique and I like lemonbar. I wanted to track remaining
   pomodoro time on my panel and couldn't find any ready-made solution. I was also
@@ -13,57 +74,10 @@ It can run multiple timers and can be used as countdown or as stopwatch.
   It updates lemonbar and my activity.log file when the timer is halted.
 
   Also, I have another script that provides a rofi-based menu to rimer.
-* What it does
-  You start server with the following commmand
 
-  ~$ rimer start <command>~
-
-  ~<command>~ will be called every timer step with the following arguments:
-
-  ~<name> <elapsed time> <total time to run> <status>~
-
-  ~<name>~ is used to distinguish different running timers.
-
-  If you run your timer like this:
-
-  ~$ rimer add --name work --duration 3600 --step 5~
-
-  New timer with name ~work~ will be added and it will run 3600 seconds. Every 5
-  seconds the ~<command>~ will be called like this:
-
-  ~$ <command> work <elapsed time> 3600 running~
-
-  If you pause the timer
-
-  ~$ rimer pause work~
-
-  Rimer will update ~work~ timer:
-
-  ~$ <command> work <elapsed time> 3600 paused~
-
-  Resume timer:
-
-  ~$ rimer resume --name work~
-
-  The final update will have the status ~halted~. You can explicitly halt your
-  timer with halt command:
-
-  ~$ rimer halt --name work~
-
-  You can use your timer as a ~stopwatch~ by setting duration to a maximum
-  *unsigned 64 bit integer*. I hope you will never run your stopwatch for a
-  period so long :). This keeps implementation simple IMO.
-
-  Other commands are ~report~, ~quit~. ~report~ gives you a list of all
-  currently present timers in the same format as described above. ~quit~ tells
-  *rimer* to quit daemon.
-* Building
-  Install rust and cargo. Download this repo and run in the directory:
-
-  ~$ cargo build --release~
-* Installation
-  You can install it in the cargo's executables directory
-
-  ~$ cargo install --path . --force~
 * Todo
-** Make single config with structopt
+** [#A] add your nix expression to github
+** [#B] Make single config with structopt
+** [#B] put license
+** [#C] rimer stopwatch with step (1- (expt 2 64)) crashes
+** [#C] socket activation
