--- a/README.org
+++ b/README.org
@@ -61,7 +61,10 @@ multiple timers and can be used as a countdown or as a stopwatch.
 
   #+begin_src nix
     packageOverrides = pkgs: {
-      rimer = import https://url.url pkgs;
+      rimer = import (super.fetchurl {
+        url = "https://raw.githubusercontent.com/xFA25E/rimer/master/default.nix";
+        sha256 = "1rxihdnbpmkg4zvs2s1l20sv1n4r9xqs50yfayqd26s1s060n5z0";
+      }) { pkgs = pkgs; };
     };
   #+end_src
 
